--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docs-menu.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docs-menu.scss
@@ -59,7 +59,7 @@
         top: 50%;
         left: $spacer;
         transform: translateY(-50%);
-        background: url("/icons/outline/search-white.svg") no-repeat;
+        background: url('/icons/outline/search-white.svg') no-repeat;
       }
     }
   }
