--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_documentation-article.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_documentation-article.scss
@@ -43,7 +43,8 @@
     .table {
       @extend .table-dark;
     }
-    th, td {
+    th,
+    td {
       background: inherit;
       img {
         margin: 0;
