--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
@@ -21,7 +21,8 @@
         {{ .Params.githubStars.logo | safeHTML }}
         <span class="hero__stars-text">{{ .Params.githubStars.actionText }}</span>
         <span class="hero__stars-count">
-          {{ .Params.githubStars.starIcon | safeHTML }} {{ .Params.githubStars.stars }}
+          {{ .Params.githubStars.starIcon | safeHTML }}
+          {{ .Params.githubStars.stars }}
         </span>
       </a>
     </div>
