--- a/qdrant-landing/themes/qdrant-2024/assets/css/_components.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_components.scss
@@ -6,4 +6,4 @@
 @import 'components/utilites';
 @import 'components/copy-btn';
 @import 'components/lang-switcher';
-@import "components/alerts";
+@import 'components/alerts';
