top level links in the mobile menu

--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/menu-mobile.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/menu-mobile.html
@@ -8,7 +8,11 @@
       {{ range .Params.menuItems }}
         <li class="menu-mobile__item" data-path="{{ .id }}" onclick="toggleMenu('{{ .id }}')">
           <div class="menu-mobile__item-content">
-            {{ .name }}
+            {{ if .url }}
+              <a href="{{ .url }}">{{ .name }}</a>
+            {{ else }}
+              {{ .name }}
+            {{ end }}
             {{ if .subMenuItems }}
               <button type="button" class="menu-mobile__expand">{{ partial "svg" "arrow-sm-down.svg" }}</button>
             {{ end }}
