moved breackpoint to lg at some places

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docker-deploy.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docker-deploy.scss
@@ -70,7 +70,7 @@
     line-height: rem(14);
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     flex-direction: row;
     padding-top: $spacer * 5;
     padding-bottom: $spacer * 5;
