--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_documentation-article.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_documentation-article.scss
@@ -27,6 +27,10 @@
     margin-bottom: $spacer;
   }
 
+  a:hover {
+    text-decoration: underline;
+  }
+
   @include content-image($font-size-sm, $neutral-90, $spacer);
 
   li:not(:last-of-type) {
