--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/advanced-search-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/advanced-search-use-cases.html
@@ -4,7 +4,7 @@
       <h2 class="advanced-search-use-cases__title">{{ .Params.title }}</h2>
       <div class="advanced-search-use-cases__cards row g-4">
         {{ range .Params.features }}
-          <div class="col-12 col-xl-4">
+          <div class="col-12 col-md-6 col-xl-4">
             <div class="card advanced-search-use-cases__card">
               <img class="advanced-search-use-cases__card-image" src="{{ .image.src }}" alt="{{ .image.alt }}" />
               <h6 class="advanced-search-use-cases__card-title">{{ .title }}</h6>
