--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/docker-deploy.html
@@ -1,7 +1,7 @@
 <section class="docker-deploy{{ .class }}">
   <div class="container">
     <div class="docker-deploy__content row">
-      <div class="col-12 col-xl-5">
+      <div class="col-12 col-lg-5">
         <div class="docker-deploy__description">
           <h3 class="docker-deploy__title">{{ .context.Params.title }}</h3>
           <p class="docker-deploy__subtitle">
@@ -15,7 +15,7 @@
           </p>
         </div>
       </div>
-      <div class="col-12 col-xl-7">
+      <div class="col-12 col-lg-7">
         <div class="docker-deploy__preview">
           <div class="docker-deploy__image" style="background-image: url(/img/docker-illustration.png)">
             <code>
