--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-features.html
@@ -2,9 +2,9 @@
   <section class="hybrid-cloud-features">
     <div class="container">
       <h3 class="hybrid-cloud-features__title">{{ .Params.title }}</h3>
-      <div class="hybrid-cloud-features__cards row justify-content-xl-between">
+      <div class="hybrid-cloud-features__cards row justify-content-lg-between">
         {{ range .Params.cards }}
-          <div class="col-12 col-xl-3">
+          <div class="col-12 col-lg-3">
             <div class="card hybrid-cloud-features__card">
               <img class="hybrid-cloud-features__card-icon" src="{{ .icon.src }}" alt="{{ .icon.alt }}" />
               <p class="hybrid-cloud-features__card-description">{{ .description }}</p>
