--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-how-it-works.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-how-it-works.html
@@ -3,11 +3,11 @@
     <div class="container">
       <div class="row">
         <div class="hybrid-cloud-how-it-works__content col-12">
-          <div class="row justify-content-xl-between">
-            <div class="col-12 col-xl-4">
+          <div class="row justify-content-lg-between">
+            <div class="col-12 col-lg-4">
               <h2 class="hybrid-cloud-how-it-works__title">{{ .Params.title }}</h2>
             </div>
-            <div class="hybrid-cloud-how-it-works__steps col-12 col-xl-7">
+            <div class="hybrid-cloud-how-it-works__steps col-12 col-lg-7">
               {{ range .Params.steps }}
                 <div class="hybrid-cloud-how-it-works__step">
                   <div class="hybrid-cloud-how-it-works__step-number">
@@ -21,7 +21,7 @@
           </div>
         </div>
 
-        <div class="hybrid-cloud-how-it-works__preview col-12 col-xl-10">
+        <div class="hybrid-cloud-how-it-works__preview col-12 col-lg-10">
           <img
             src="{{ .Params.image.src }}"
             alt="{{ .Params.image.alt }}"
