--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_advanced-search-use-cases.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_advanced-search-use-cases.scss
@@ -34,7 +34,7 @@
     }
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 2.5;
     padding-bottom: $spacer * 5;
 
