--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-cases.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-cases.scss
@@ -33,7 +33,7 @@
     }
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 2.5;
     padding-bottom: $spacer * 6.5;
 
