--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-hero.scss
@@ -67,13 +67,13 @@
     }
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 5;
     padding-bottom: $spacer * 7.5;
     text-align: left;
 
     &__content {
-      width: rem(500);
+      width: rem(480);
     }
 
     &__title {
@@ -102,8 +102,17 @@
     }
 
     &__preview {
-      width: rem(550);
+      width: rem(480);
       margin-top: -$spacer * 5;
+    }
+  }
+
+  @include media-breakpoint-up(xl) {
+    &__content {
+      width: rem(500);
+    }
+    &__preview {
+      width: rem(550);
     }
   }
 }
