--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-how-it-works.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hybrid-cloud-how-it-works.scss
@@ -91,7 +91,7 @@
     width: 100%;
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 9;
     padding-bottom: $spacer * 9;
 
