--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_use-cases-vector-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_use-cases-vector-features.scss
@@ -56,7 +56,7 @@
     }
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 7.5;
     padding-bottom: $spacer * 7.5;
 
