--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-hero.html
@@ -1,7 +1,7 @@
 {{ with (.Site.GetPage "/hybrid-cloud/hybrid-cloud-hero") }}
   <section class="hybrid-cloud-hero">
     <div class="container">
-      <div class="d-flex flex-column flex-xl-row justify-content-xl-between">
+      <div class="d-flex flex-column flex-lg-row justify-content-lg-between">
         <div class="hybrid-cloud-hero__content">
           <h1 class="hybrid-cloud-hero__title">{{ .Params.title }}</h1>
           <div class="hybrid-cloud-hero__features">
