--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/tutorials.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/tutorials.html
@@ -4,7 +4,7 @@
       <div class="tutorials__content row">
         <div class="tutorials__overlay-top"></div>
         <div class="tutorials__overlay-bottom"></div>
-        <div class="col-12 col-xl-5">
+        <div class="col-12 col-lg-5">
           <div class="tutorials__description">
             <h3 class="tutorials__title">{{ .Params.title }}</h3>
             <p class="tutorials__subtitle">
@@ -15,7 +15,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-xl-7">
+        <div class="col-12 col-lg-7">
           <div class="tutorials__preview">
             <div class="tutorials__image" style="background-image: url(/img/become-a-partner.png)">
               <code>
