moved breackpoint to lg at some places

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-articles-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-articles-hero.scss
@@ -35,7 +35,7 @@
     z-index: -1;
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 5;
     padding-bottom: $spacer * 7.5;
 
