--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-features.html
@@ -1,8 +1,8 @@
 <section class="qdrant-blog-features">
   <div class="container">
     <div class="qdrant-blog-features__header row">
-      <h2 class="qdrant-blog-features__title col-12 col-xl-6">{{ .Params.features_title }}</h2>
-      <form class="qdrant-blog-features__form col-12 col-xl-6">
+      <h2 class="qdrant-blog-features__title col-12 col-lg-6">{{ .Params.features_title }}</h2>
+      <form class="qdrant-blog-features__form col-12 col-lg-6">
         <div class="qdrant-blog-features__form-search-block">
           <button
             type="button"
