--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-articles-posts.html
@@ -1,6 +1,6 @@
 <section class="qdrant-articles-posts">
   <div class="container">
-    <div class="qdrant-articles-posts__articles row gx-4 gy-5 gy-xl-6">
+    <div class="qdrant-articles-posts__articles row gx-4 gy-5 gy-lg-6">
       {{ $all := ($.Site.GetPage "articles" .Section).Pages.ByPublishDate.Reverse }}
       {{ $paginator := .Paginate (where $all ".Params.featured" "!=" true) 10 }}
       {{ range $paginator.Pages }}
@@ -10,7 +10,7 @@
         {{ if .Params.external_link }}
           {{ $link = .Params.external_link }}
         {{ end }}
-        <article class="col-12 col-xl-6 post">
+        <article class="col-12 col-lg-6 post">
           <a class="post-link" href="{{ .RelPermalink }}">
             <div class="post-preview">
               <img src="{{ .Params.preview_dir }}/preview.jpg" alt="Preview" />
