--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
@@ -13,7 +13,7 @@
 
         {{ if or (not .Params.featured) }}
 
-          <article class="qdrant-blog-posts__article post col-12 col-xl-4">
+          <article class="qdrant-blog-posts__article post col-12 col-lg-4">
             <a class="post-link" href="{{ .RelPermalink }}">
               {{ if .Params.preview_image }}
                 <div class="post-preview">
