--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
@@ -89,7 +89,7 @@
     blockquote {
       padding: rem(32) rem(40) 1px;
       border-radius: $spacer * 0.5;
-      background: linear-gradient(180deg, #161E33 0%, #0E1424 100%);
+      background: linear-gradient(180deg, #161e33 0%, #0e1424 100%);
       color: $neutral-98;
     }
   }
