--- a/qdrant-landing/themes/qdrant/static/css/blocks/forms/_newsletter-form.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/forms/_newsletter-form.scss
@@ -41,6 +41,10 @@
       color: var(--brand-error-500);
     }
   }
+  .hs_error_rollup {
+    position: absolute;
+    bottom: -28px;
+  }
 
   &_default {
     margin-bottom: 35px;
