added a leadership photo

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_leadership.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_leadership.scss
@@ -28,6 +28,7 @@
     aspect-ratio: 0.96;
     background-position: center;
     background-size: contain;
+    border-radius: rem(6);
   }
 
   &__card-name {
