benchmarks style fixes

--- a/qdrant-landing/themes/qdrant-2024/assets/css/benchmarks.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/benchmarks.scss
@@ -12,4 +12,12 @@
   &__plot-wrapper {
     margin-bottom: $spacer * 2;
   }
+  .table-striped {
+    th, td {
+      font-size: $font-size-sm;
+    }
+  }
+  .breadcrumbs {
+    margin-left: 0;
+  }
 }
