--- a/qdrant-landing/themes/qdrant-2024/assets/css/benchmarks.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/benchmarks.scss
@@ -1,4 +1,4 @@
-@import "base";
+@import 'base';
 @import 'partials/qdrant-articles-hero';
 @import 'partials/qdrant-post';
 @import 'partials/share-buttons';
@@ -13,7 +13,8 @@
     margin-bottom: $spacer * 2;
   }
   .table-striped {
-    th, td {
+    th,
+    td {
       font-size: $font-size-sm;
     }
   }
