--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hubspot-form.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hubspot-form.scss
@@ -2,6 +2,7 @@
 
 form.hs-form {
   position: relative;
+
   & > fieldset {
     min-width: 100%;
     margin-bottom: rem(20);
@@ -31,7 +32,6 @@ form.hs-form {
         }
       }
     }
-
     &.form-columns-2 {
       display: flex;
       flex-direction: column;
@@ -50,6 +50,14 @@ form.hs-form {
           $remValue: rem(10);
           max-width: calc(50% - #{$remValue});
         }
+      }
+    }
+
+    // todo: this may be removed once the form is updated
+    &.form-columns-0 {
+      margin: 0;
+      .hs-richtext {
+        display: none !important;
       }
     }
   }
